package usantatecla.mastermind.views;

import usantatecla.mastermind.controllers.AceptorController;
import usantatecla.mastermind.controllers.Controller;
import usantatecla.mastermind.controllers.VisitorController;

public abstract class View {

	public abstract void interact(AceptorController aceptorController);

}
